--- a/views/item.jade
+++ b/views/item.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-#listall.row
+#mainarea.row
   #left-pane.col-sm-4
     #image-contain
       img#itemimage(src='', alt='')
