--- a/views/temp.html
+++ b/views/temp.html
@@ -40,6 +40,8 @@
 
           <!-- end index -->
 
+
+
           <!-- view item partial -->
           <div class="row" id="listall">
             <div id="left-pane" class="col-sm-4">
@@ -61,6 +63,55 @@
           </div>
 
           <!-- end view item -->
+
+
+          <!-- start add item -->
+          <div class="row" id="mainarea">
+            <div id="left-pane" class="col-sm-4">
+
+              <div id="image-contain">
+
+                <div class="form-group">
+                  <label for="itemimgurl">Item Image</label>
+                  <input type="text" id="itemimgurl">
+                  <p class="help-block">Paste the URL of the image you'd like to use!</p>
+                </div>
+
+              </div>
+
+            </div>
+            <div id="right-pane" class="col-sm-8">
+
+              <div id="itemname" class="row">
+                <div class="form-group">
+                  <label for="itemnameinput">Item Name</label>
+                  <input type="text" id="itemnameinput">
+                </div>
+              </div>
+
+              </div>
+
+
+                <div id="itemdesc" class="row">
+
+
+                  <div class="form-group">
+                    <label for="itemdescinput">Item Description</label>
+                    <input type="text" id="itemdescinput">
+                  </div>
+
+                </div>
+
+                <div id="itemprice" class="row">
+
+                  <div class="form-group">
+                    <label for="itempriceinput">Item Price</label>
+                    <input type="text" id="itempriceinput">
+                  </div>
+
+                </div>
+            </div>
+          <!-- end add item -->
 
 
 
