--- a/views/add.jade
+++ b/views/add.jade
@@ -25,4 +25,6 @@ block content
           .form-group
             label(for='itempriceinput') Item Price
             input#itempriceinput.form-control(type='number')
+        #itemsubmit.row
+          .form-group
             button#senditem.btn.btn-default(type='submit') Add Item!
