--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(lang='en')
     script(src='//code.jquery.com/jquery-2.2.0.min.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js')
     script(src='/javascripts/main.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.1/lodash.min.js')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
